<!--Copyright 2015 Ben Armstrong, Geoffrey De Ruiter-->

<!--This file is part of Democracy Link.-->

<!--Democracy Link is free software: you can redistribute it and/or modify-->
<!--it under the terms of the GNU General Public License as published by-->
<!--the Free Software Foundation, either version 3 of the License, or-->
<!--(at your option) any later version.-->

<!--This program is distributed in the hope that it will be useful,-->
<!--but WITHOUT ANY WARRANTY; without even the implied warranty of-->
<!--MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the-->
<!--GNU General Public License for more details.-->

<!--You should have received a copy of the GNU General Public License-->
<!--along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Setup1"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@drawable/grey_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Setup1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/setup2of4"
            android:id="@+id/setup2of4"
            android:layout_gravity="center" />

        <TextView
            android:paddingTop="@dimen/activity_small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/firstName"
            android:text="@string/first_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:hint="@string/required"
            android:ems="10"
            android:id="@+id/firstNameText"
            android:background="@android:drawable/edit_text" />

        <TextView
            android:paddingTop="@dimen/activity_small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/last_name"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:hint="@string/required"
            android:ems="10"
            android:id="@+id/lastNameText"
            android:background="@android:drawable/edit_text" />

        <TextView
            android:paddingTop="@dimen/activity_small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/degree"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:id="@+id/degreeText"
            android:background="@android:drawable/edit_text"
            android:inputType="textCapSentences" />

        <TextView
            android:paddingTop="@dimen/activity_small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/employment"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:id="@+id/employmentPositionText"
            android:background="@android:drawable/edit_text"
            android:inputType="textCapSentences" />

        <TextView
            android:paddingTop="@dimen/activity_small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/employer"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:id="@+id/employerText"
            android:background="@android:drawable/edit_text"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email_signature"
            android:id="@+id/textView9" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/signature_array"
            android:id="@+id/signatureSpinner"
            android:background="@android:drawable/spinner_dropdown_background" />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/continue_text"
                android:id="@+id/doneSetup2Button"
                android:onClick="startSetup3"
                android:layout_gravity="bottom" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
