<!--Copyright 2015 Ben Armstrong, Geoffrey De Ruiter-->

<!--This file is part of Democracy Link.-->

<!--Democracy Link is free software: you can redistribute it and/or modify-->
<!--it under the terms of the GNU General Public License as published by-->
<!--the Free Software Foundation, either version 3 of the License, or-->
<!--(at your option) any later version.-->

<!--This program is distributed in the hope that it will be useful,-->
<!--but WITHOUT ANY WARRANTY; without even the implied warranty of-->
<!--MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the-->
<!--GNU General Public License for more details.-->

<!--You should have received a copy of the GNU General Public License-->
<!--along with this program.  If not, see <http://www.gnu.org/licenses/>.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ca.democracylink.android.democracylink.About"
    android:background="@drawable/grey_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_info"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/more_info"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:textIsSelectable="false"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empowered_citizens"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="showEmpoweredCitizensDialog"
        android:textColor="#ff261fff"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/representation"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="showRepresentationDialog"
        android:textColor="#ff261fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/non_partisan_communication"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="showDiplomaticNonPartisanDialog"
        android:textColor="#ff261fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/canadian_democracy"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="showCanadianDemocracyDialog"
        android:textColor="#ff261fff" />

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/special_supporters"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="showSpecialSupportersDialog" />
        -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:id="@+id/feedback_button"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="sendFeedbackButtonPressed" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/donate"
            android:id="@+id/donate_button"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="donateButtonPressed" />
    </LinearLayout>


</LinearLayout>
